Fix - z-index dropdown list

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -41,6 +41,8 @@
   margin-top: 19px;
   display: none;
   list-style: none;
+  position: relative;
+  z-index: 1;
 }
 
 .container .filters div:hover ul.popover {
